--- a/Themes-Interior/src/app/pages/footer/footer.component.html
+++ b/Themes-Interior/src/app/pages/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+
+<footer class="bg-body-tertiary text-center text-lg-start">
+
+    <div class="text-center p-5"  style=" color:#28475d; font-family: sans-serif; font-size: 30px; font-weight: bold; text-transform: uppercase;background-color: rgba(0, 0, 0, 0.05);">
+      © 2024 Copyright:
+    <span style="color:#28475d; font-family: sans-serif; font-size: 30px; font-weight: bold; text-transform: uppercase;">Themes</span><span style="color:#f5994b;font-family:sans-serif; font-size: 30px;  font-weight: bold; text-transform: uppercase;margin-left: 0.5%;">Interior</span>
+      
+    </div>
+    
+  </footer>
