--- a/Themes-Interior/src/app/pages/service/service.component.html
+++ b/Themes-Interior/src/app/pages/service/service.component.html
@@ -1,1 +1,72 @@
-<p>service works!</p>
+<div class="service-menu">
+    <!-- <p>interior </p>
+    <p>Civil </p>
+    <p>Electric</p> -->
+    <div class="service-conatiner">
+        <div class="service-heading">
+            <p class="service-text">Services</p>
+            <p class="service-desc">We provide best service to our precious customers.</p>
+        </div>
+        <div class="service-item-container">
+            
+            <div class="service-item">
+                <div class="hr"></div>
+                <div class="item-list-container">
+                    <div class="service-image-div">
+                        
+                    </div>
+                    <p>Interior</p>
+                    <p class="item-desc">Crafting Timeless Interiors 
+                        That Reflect Your Style, 
+                        Elevate Comfort, and Inspire Every Moment.</p>
+                    <p class="more-btn">More</p>
+                </div>
+                
+                <div class="hrd"></div>
+            </div>
+            <div class="service-item">
+                <div class="hr"></div>
+                <div class="item-list-container">
+                    <div class="service-image-div">
+
+                    </div>
+                    <p>Moduler Kitchen</p>
+                    <p class="item-desc">Crafting Timeless Interiors 
+                        That Reflect Your Style, 
+                        Elevate Comfort, and Inspire Every Moment.</p>
+                    <p class="more-btn">More</p>
+                </div>
+                
+                <div class="hrd"></div>
+            </div>
+            <div class="service-item">
+                <div class="hr"></div>
+                <div class="item-list-container">
+                    <div class="service-image-div">
+
+                    </div>
+                    <p>Painting</p>
+                    <p class="item-desc">Crafting Timeless Interiors 
+                        That Reflect Your Style, 
+                        Elevate Comfort, and Inspire Every Moment.</p>
+                    <p class="more-btn">More</p>
+                </div>
+                <div class="hrd"></div>
+            </div>
+            <div class="service-item">
+                <div class="hr"></div>
+                <div class="item-list-container">
+                    <div class="service-image-div">
+
+                    </div>
+                    <p>Sliding</p>
+                    <p class="item-desc">Crafting Timeless Interiors 
+                        That Reflect Your Style, 
+                        Elevate Comfort, and Inspire Every Moment.</p>
+                    <p class="more-btn">More</p>
+                </div>
+                <div class="hrd"></div>
+            </div>
+        </div>
+    </div>
+</div>
