--- a/Themes-Interior/src/app/pages/carousel/carousel.component.css
+++ b/Themes-Interior/src/app/pages/carousel/carousel.component.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+    background: rgba(0, 0, 0, 0.7); 
     z-index: 1;
     
   }
@@ -35,7 +35,7 @@
     color: white;
     margin: 10px;
     width: 100%;
-    max-width: 200px; /* Limit button width */
+    max-width: 200px;
     cursor: pointer;
     transition: background 0.3s, color 0.3s;
   }
