--- a/Themes-Interior/src/app/pages/carousel/carousel.component.html
+++ b/Themes-Interior/src/app/pages/carousel/carousel.component.html
@@ -1,4 +1,5 @@
-<div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+<div class="carousel-container">
+  <div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
       <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
@@ -6,16 +7,15 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://media.designcafe.com/wp-content/uploads/2022/07/15170350/luxury-home-design-on-budget.jpg" alt="Image 1" class="d-block w-100">
+        <img src="https://media.designcafe.com/wp-content/uploads/2022/07/15170350/luxury-home-design-on-budget.jpg" alt="Image 1" class="d-block w-90">
       </div>
       <div class="carousel-item">
-        <img src="https://depanache.in/depanache-ui/uploads/2022/06/small-duplex-house-interior-design-ideas.webp" alt="Image 2" class="d-block w-100">
+        <img src="https://depanache.in/depanache-ui/uploads/2022/06/small-duplex-house-interior-design-ideas.webp" alt="Image 2" class="d-block w-900">
       </div>
       <div class="carousel-item">
-        <img src="https://static.asianpaints.com/content/dam/asianpaintsbeautifulhomes/home-decor-advice/guides-and-how-tos/duplex-house-interior-design-ideas-that-dont-cost-the-earth/Title-living-room-dining-room-design.jpg" alt="Image 3" class="d-block w-100">
+        <img src="https://static.asianpaints.com/content/dam/asianpaintsbeautifulhomes/home-decor-advice/guides-and-how-tos/duplex-house-interior-design-ideas-that-dont-cost-the-earth/Title-living-room-dining-room-design.jpg" alt="Image 3" class="d-block w-90">
       </div>
     </div>
-    <!-- Left and right controls/icons -->
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </button>
@@ -24,7 +24,6 @@
     </button>
   </div>
 
-  
   <div class="carousel-caption">
     <h2 style="color: rgba(255, 166, 0, 0.867);">Themes Interior</h2>
     <p>Creative themes to innovative interior</p>
@@ -33,5 +32,4 @@
       <button class="book-appointment">EXPLORE SERVICES</button>
     </span>
   </div>
-
-  
+</div>
