--- a/Themes-Interior/src/app/pages/contact-us/contact-us.component.html
+++ b/Themes-Interior/src/app/pages/contact-us/contact-us.component.html
@@ -1,1 +1,54 @@
-<p>contact-us works!</p>
+<div class="contact-header mt-4">
+    <h1 class="contact-us-text title">Contact Us</h1>
+    <p class="conatct-us-para">Have Questions? Contact Us</p>
+</div>
+<div class="container mb-5 mt-3">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-header">
+                    Call us
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"><i class="fa-solid fa-phone"></i>
+                        <span>898889879</span>
+                    </h5>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-header">
+                    Connect On Social Media
+                </div>
+                <div class="card-body">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-header">
+                    Address
+                </div>
+                <div class="card-body">
+                    <i class="fa-regular fa-address-card"></i>
+                    <span class="card-text">Ulwe navi mumbai</span>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid map-container">
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3772.059875379585!2d73.01420027497585!3d19.01708308217544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c39754f0f24b%3A0x18ccb0f934d36441!2sTHEMES%20INTERIOR%2C%20MUMBAI!5e0!3m2!1sen!2sin!4v1724744160334!5m2!1sen!2sin"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
