--- a/Themes-Interior/src/app/pages/footer/footer.component.html
+++ b/Themes-Interior/src/app/pages/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="bg-body-tertiary text-center text-lg-start">
+<footer class="bg-body-tertiary text-center text-lg-start container-fluid">
 
     <div class="text-center p-5"  style=" color:#28475d; font-family: sans-serif; font-size: 30px; font-weight: bold; text-transform: uppercase;background-color: rgba(0, 0, 0, 0.05);">
       © 2024 Copyright:
