--- a/Themes-Interior/src/styles.css
+++ b/Themes-Interior/src/styles.css
@@ -57,4 +57,7 @@ body {
   .navbar-brand .logo {
     max-height: 50px;
   }
+  *{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
   
