--- a/Themes-Interior/src/app/home/home.component.html
+++ b/Themes-Interior/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="container mt-5">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h3>ABOUT OUR COMPANY</h3>
+        <h3 style="color:rgb(229, 104, 15)">ABOUT OUR COMPANY</h3>
         <h4>Providing your business with a quality IT service is our passion.</h4>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -31,7 +31,7 @@
       <div class="coverimg position-relative">
         <div class="coverimgtext position-absolute top-50 start-50 translate-middle text-center">
           <h2 style="color: white;">Digitally transform and grow your business!</h2>
-          <button class="btn btn-light" routerLink="contactus" class="btn">Contact Us</button>
+          <button  routerLink="contactus" class="btn">Contact Us</button>
         </div>
       </div>
     </div>
