--- a/Themes-Interior/src/app/pages/about-us/about-us.component.html
+++ b/Themes-Interior/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,25 @@
-<p>about-us works!</p>
+<div class="container">
+    <h4 class="title">
+        About Us
+    </h4>
+</div>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-6"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQp_VnIw-d8k2VVN5hxquf3tTMYKS_5x-7AfA&s" alt="" style="width: 100%; height: 400px;"></div>
+        <div class="col-md-6">
+            <h6 style="color: chocolate;">
+                What services We provide
+            </h6>
+            <p>
+                Explore the latest home interior designs for 
+                Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, 
+                Bathroom & more atExplore the latest home interior designs
+                 for Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, Bathroom & more atExplore the latest home interior designs for Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, Bathroom & more atExplore the latest home interior designs for Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, Bathroom & more atExplore the latest home interior designs for Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, Bathroom & more atExplore the latest home interior designs for Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, Bathroom & more atExplore the latest home interior designs for Kitchen, Bedroom, Living Room, Dining Room, Wardrobe, Bathroom & more atExplore the latest home interior designs for Kitchen, Bedroom,
+                 Living Room, Dining Room, Wardrobe, Bathroom & more at
+            </p>
+        </div>
+      </div>
+</div>
+<div style="margin-top: 10px; " class="container-fluid">
+    <app-footer></app-footer> 
+</div>
